# Health-care-project

main/: CMakeLists.txt  Kconfig.projbuild  MAXheartRate.c  MAXheartRate.h  MLX90614_API.c  MLX90614_API.h  MLX90614_SMBus_Driver.c  MLX90614_SMBus_Driver.h  heartrate.c  heartrate.h  i2c.c  i2c.h  my_data.h  reading.c  reading.h  scan.c  temperature.c  temperature.h
